--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Location voiture"
+        android:text="Location Rapide"
         android:textSize="32sp"
         android:textColor="@color/white"
         android:textStyle="bold"
