--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <color name="my_color">#FF0000</color>
+   <color name="my_color">#2F343A</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="color_button">#159DE9</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
