--- a/app/src/main/res/layout/activity_voiturelocation_details.xml
+++ b/app/src/main/res/layout/activity_voiturelocation_details.xml
@@ -30,103 +30,274 @@
         android:background="@drawable/rounded_corner"
         android:orientation="vertical">
 
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="marque"
-            android:id="@+id/marque_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:text="Marque :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="marque"
+                android:id="@+id/marque_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="modèle"
-            android:id="@+id/model_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView  android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="version"
-            android:id="@+id/version_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
-        <TextView
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:text="modèle :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="modèle"
+                android:id="@+id/model_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="place"
-            android:id="@+id/place_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
-        <TextView
+            android:orientation="horizontal">
+
+            <TextView  android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:text="version :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+            <TextView  android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="version"
+                android:id="@+id/version_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="carburant"
-            android:id="@+id/carburant_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="boite de vitesse"
-            android:id="@+id/boiteVitesse_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="carburant :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="carburant"
+                android:id="@+id/carburant_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/prixHoraire_details_text_view"
-            android:text="prix horaire"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:text="place :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="place "
+                android:id="@+id/place_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/prixJournalier_details_text_view"
-            android:text="prix journalier"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="boite de vitesse :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="boite de vitesse"
+                android:id="@+id/boiteVitesse_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ville"
-            android:id="@+id/ville_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="prix horaire :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/prixHoraire_details_text_view"
+                android:text="prix horaire"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="statut"
-            android:id="@+id/statut_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
-        <TextView
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="prix journalier :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/prixJournalier_details_text_view"
+                android:text="prix journalier"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="timestamp"
-            android:id="@+id/locationVoiture_timestamp_details_text_view"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginVertical="4dp"/>
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:text="ville :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ville"
+                android:id="@+id/ville_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="statut :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="statut"
+                android:id="@+id/statut_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Publié le :"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="timestamp"
+                android:id="@+id/locationVoiture_timestamp_details_text_view"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginVertical="4dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
