--- a/app/src/main/res/layout/recycler_locationvoiture_item.xml
+++ b/app/src/main/res/layout/recycler_locationvoiture_item.xml
@@ -8,30 +8,56 @@
     android:backgroundTint="@color/teal_700"
     android:background="@drawable/rounded_corner">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Marque"
+            android:id="@+id/marque_text_view"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginVertical="4dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Modèle"
+            android:id="@+id/model_text_view"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginVertical="4dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Marque"
-        android:id="@+id/marque_text_view"
+        android:text="À partir de"
         android:textColor="@color/white"
+        android:layout_marginLeft="140dp"
         android:textSize="18sp"
         android:layout_marginVertical="4dp"/>
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Modèle"
-        android:id="@+id/model_text_view"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_marginVertical="4dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/prixHoraire_text_view"
-        android:text="Prix horaire"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_marginVertical="4dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/prixHoraire_text_view"
+            android:text="Prix horaire"
+            android:layout_marginLeft="140dp"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginVertical="4dp"/>
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/prixJournalier_text_view"
+            android:text="Prix Journalier"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginVertical="4dp"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
