--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -4,122 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
-    android:background="@color/my_color"
     android:padding="16dp"
-    tools:context=".ProfilActivity">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/title_profil_layout">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/page_title"
-            android:text="Location disponible"
-            android:textColor="@color/white"
-            android:textSize="32dp"
-            android:textStyle="bold"/>
-
-    </RelativeLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title_profil_layout"
-        android:id="@+id/nom_layout"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:text="Nom :"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/nom_profil_text_view"
-            android:text="Nom"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nom_layout"
-        android:id="@+id/prenom_layout"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:text="Prénom :"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/prenom_profil_text_view"
-            android:text="Prénom"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/prenom_layout"
-        android:id="@+id/email_layout"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:text="Email :"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/email_profil_text_view"
-            android:text="Email"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
+    tools:context=".ProfilActivity"
+    tools:ignore="ExtraText"
+    android:background="@color/my_color">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/title_profil"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location en cours"
-        android:textSize="25dp"
-        android:layout_below="@id/email_layout"
-        android:id="@+id/title_location"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:gravity="center"
+        android:text="Profil"
+        android:textSize="32dp"
         android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        android:paddingTop="10dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtNom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="80dp"
+        android:text="Nom :"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/nom_profil_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="80dp"
+        android:text="Doe"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txtPrenom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="120dp"
+        android:text="Prénom :"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/prenom_profil_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="120dp"
+        android:text="John"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="160dp"
+        android:text="Email :"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/email_profil_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="160dp"
+        android:text="johndoe@gmail.com"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txtLocationEnCours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="230dp"
+        android:gravity="center"
+        android:text="Location en cours"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -128,7 +101,7 @@
         android:layout_marginVertical="10dp"
         android:backgroundTint="@color/teal_700"
         android:id="@+id/location_en_cours_layout"
-        android:layout_below="@id/title_location"
+        android:layout_below="@id/txtLocationEnCours"
         android:background="@drawable/rounded_corner"
         android:orientation="vertical">
 
@@ -248,118 +221,6 @@
         android:textSize="18sp">
 
     </com.google.android.material.button.MaterialButton>
-
-
-=======
-    tools:context=".activity_profil"
-    tools:ignore="ExtraText"
-    android:background="@color/my_color"
-    >
-
-    <!-- this is a comment -->
-
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:gravity="center"
-        android:text="Profil"
-        android:textColor="@color/white"
-        android:textSize="19dp"
-        android:textStyle="bold"
-
-        />
-
-    <TextView
-        android:id="@+id/txtNom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="80dp"
-        android:text="nom :"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/txt_AfficheNom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="80dp"
-        android:text="Doe"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-
-        />
-
-    <TextView
-        android:id="@+id/txtPrenom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="120dp"
-        android:text="prenom :"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/txt_AffichePrenom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="120dp"
-        android:text="John"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="160dp"
-        android:text="Email :"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/txt_AfficheEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="160dp"
-        android:text="johndoe@gmail.com"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/txtLocationEnCours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="230dp"
-        android:gravity="center"
-        android:text="Location en cours"
-        android:textColor="@color/white"
-        android:textSize="19dp"
-        android:textStyle="bold"
-
-        />
->>>>>>> origin/main
 
 
 </RelativeLayout>
