--- a/app/src/main/res/layout/activity_location_create.xml
+++ b/app/src/main/res/layout/activity_location_create.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/page_title"
-            android:text="Ajouter une nouvelle voiture à la location"
+            android:text="Ajouter un véhicule"
             android:textColor="@color/white"
             android:textSize="32dp"
             android:textStyle="bold"/>
