--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -9,17 +9,31 @@
     tools:ignore="ExtraText"
     android:background="@color/my_color">
 
-    <TextView
-        android:id="@+id/title_profil"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:gravity="center"
-        android:text="Profil"
-        android:textSize="32dp"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+        android:id="@+id/title_bar_layout">
+
+        <ImageButton
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@color/my_color"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/back_btn"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_profil"
+            android:layout_centerInParent="true"
+            android:text="Profil"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txtNom"
@@ -209,7 +223,7 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/back_btn"
+        android:id="@+id/back_annonce_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/location_en_cours_layout"
