--- a/app/src/main/res/layout/activity_voiturelocation_details.xml
+++ b/app/src/main/res/layout/activity_voiturelocation_details.xml
@@ -5,18 +5,31 @@
     android:background="@color/my_color"
     android:padding="16dp">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title_bar_layout">
+
+        <ImageButton
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@color/my_color"
+            android:layout_centerVertical="true"
+           android:layout_alignParentStart="true"
+            android:id="@+id/back_btn"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/page_title"
-            android:text="Location disponible"
+            android:layout_centerInParent="true"
+            android:text="Détail"
             android:textColor="@color/white"
-            android:textSize="32dp"
+            android:textSize="30dp"
             android:textStyle="bold"/>
+
 
     </RelativeLayout>
 
@@ -27,6 +40,7 @@
         android:layout_marginVertical="10dp"
         android:backgroundTint="@color/teal_700"
         android:layout_below="@id/title_bar_layout"
+        android:id="@+id/details_linear_layout"
         android:background="@drawable/rounded_corner"
         android:orientation="vertical">
 
@@ -299,6 +313,28 @@
 
         </LinearLayout>
 
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:layout_marginVertical="10dp"
+        android:backgroundTint="@color/color_button2"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/details_linear_layout"
+        android:background="@drawable/rounded_corner"
+        android:id="@+id/reserver_btn"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Réserver"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </RelativeLayout>
