--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="color_button">#159DE9</color>
+    <color name="color_button2">#73159DE9</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
